--- a/config/default/block.block.ghsa_foundation_views_block__news_dynamic_filtered_news.yml
+++ b/config/default/block.block.ghsa_foundation_views_block__news_dynamic_filtered_news.yml
@@ -1,6 +1,6 @@
 uuid: 150159b5-7793-4ab3-9b9a-0778da446923
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.news
@@ -11,8 +11,8 @@ dependencies:
     - ghsa_foundation
 id: ghsa_foundation_views_block__news_dynamic_filtered_news
 theme: ghsa_foundation
-region: content
-weight: -9
+region: '-1'
+weight: -7
 provider: null
 plugin: 'views_block:news-dynamic_filtered_news'
 settings:
@@ -25,6 +25,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/taxonomy/term/*\r\n/issues/*"
+    pages: '/taxonomy/term/*'
     negate: false
     context_mapping: {  }
