--- a/config/default/block.block.ghsa_foundation_views_block__resources_dynamic_filtered_resources.yml
+++ b/config/default/block.block.ghsa_foundation_views_block__resources_dynamic_filtered_resources.yml
@@ -1,6 +1,6 @@
 uuid: 51b4d95a-5843-4fd8-a099-5bc5388498cc
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.resources
@@ -11,7 +11,7 @@ dependencies:
     - ghsa_foundation
 id: ghsa_foundation_views_block__resources_dynamic_filtered_resources
 theme: ghsa_foundation
-region: content
+region: '-1'
 weight: -8
 provider: null
 plugin: 'views_block:resources-dynamic_filtered_resources'
@@ -25,6 +25,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/taxonomy/term/*\r\n/issues/*"
+    pages: "/taxonomy/term/*\r\n"
     negate: false
     context_mapping: {  }
