--- a/config/default/core.entity_view_display.node.resources.default.yml
+++ b/config/default/core.entity_view_display.node.resources.default.yml
@@ -39,7 +39,7 @@ content:
     third_party_settings: {  }
     type: file_default
   field_issues_ref:
-    weight: 5
+    weight: 2
     label: above
     settings:
       link: true
@@ -53,16 +53,13 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
   field_resources_image:
-    weight: 2
+    weight: 0
     label: hidden
     settings:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
     type: image
-  links:
-    weight: 0
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  links: true
   workbench_moderation_control: true
