--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -21,6 +21,7 @@ module:
   devel_generate: 0
   easy_breadcrumb: 0
   editor: 0
+  editor_advanced_link: 0
   embed: 0
   entity: 0
   entity_browser: 0
