--- a/config/default/field.field.node.issues.field_image.yml
+++ b/config/default/field.field.node.issues.field_image.yml
@@ -28,11 +28,11 @@ settings:
   title_field: false
   title_field_required: false
   default_image:
-    uuid: ''
+    uuid: 9731ed52-24a3-4734-bc95-1ed0294c70eb
     alt: ''
     title: ''
-    width: null
-    height: null
+    width: 800
+    height: 350
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
