--- a/config/default/field.field.node.page.field_paragraphs.yml
+++ b/config/default/field.field.node.page.field_paragraphs.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_paragraphs
     - node.type.page
     - paragraphs.paragraphs_type.callout_bar
+    - paragraphs.paragraphs_type.card_link
     - paragraphs.paragraphs_type.infographic_with_button
     - paragraphs.paragraphs_type.long_text_with_button
     - paragraphs.paragraphs_type.three_column_callout
@@ -28,6 +29,7 @@ settings:
     target_bundles:
       callout_bar: callout_bar
       view: view
+      card_link: card_link
       long_text_with_button: long_text_with_button
       infographic_with_button: infographic_with_button
       three_column_callout: three_column_callout
@@ -39,8 +41,8 @@ settings:
         enabled: true
         weight: 4
       card_link:
+        enabled: true
         weight: 5
-        enabled: false
       long_text_with_button:
         enabled: true
         weight: 7
