project meta folder ignored

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ config/default-cesar
 docroot/sites/lightning.ghsa
 docroot/sites/development.services.yml
 docroot/sites/default/files
-
+docroot/.idea/*
 
