--- a/config/default/core.entity_form_display.node.events.default.yml
+++ b/config/default/core.entity_form_display.node.events.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.events.body
     - field.field.node.events.field_date
     - field.field.node.events.field_event_image
+    - field.field.node.events.field_event_type_ref
     - node.type.events
   module:
     - datetime
@@ -20,7 +21,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -28,17 +29,17 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
   field_date:
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
   field_event_image:
     type: entity_browser_file
-    weight: 2
+    weight: 3
     settings:
       entity_browser: image_browser
       field_widget_edit: '1'
@@ -48,22 +49,27 @@ content:
       view_mode: default
       preview_image_style: thumbnail
     third_party_settings: {  }
+  field_event_type_ref:
+    weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
   path:
     type: path
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 7
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 8
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -74,7 +80,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
