--- a/config/default/core.entity_form_display.node.resources.default.yml
+++ b/config/default/core.entity_form_display.node.resources.default.yml
@@ -6,6 +6,8 @@ dependencies:
     - field.field.node.resources.body
     - field.field.node.resources.field_file_upload
     - field.field.node.resources.field_issues_ref
+    - field.field.node.resources.field_product
+    - field.field.node.resources.field_resource_categories_ref
     - field.field.node.resources.field_resource_type_ref
     - field.field.node.resources.field_resources_image
     - node.type.resources
@@ -22,7 +24,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -30,28 +32,41 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
   field_file_upload:
-    weight: 4
+    weight: 5
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
     type: file_generic
   field_issues_ref:
-    weight: 5
+    weight: 6
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+  field_product:
+    weight: 26
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+  field_resource_categories_ref:
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_select
   field_resource_type_ref:
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
   field_resources_image:
     type: entity_browser_file
-    weight: 2
+    weight: 3
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -63,20 +78,20 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 10
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -87,7 +102,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
