--- a/config/default/core.entity_view_display.node.events.default.yml
+++ b/config/default/core.entity_view_display.node.events.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.events.body
     - field.field.node.events.field_date
     - field.field.node.events.field_event_image
+    - field.field.node.events.field_event_type_ref
     - node.type.events
   module:
     - datetime
@@ -46,6 +47,13 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+  field_event_type_ref:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
 hidden:
   links: true
   workbench_moderation_control: true
