--- a/config/default/editor.editor.full_html.yml
+++ b/config/default/editor.editor.full_html.yml
@@ -31,7 +31,7 @@ settings:
           name: Media
           items:
             - Blockquote
-            - DrupalImage
+            - media_browser
         -
           name: Tools
           items:
