--- a/config/default/field.field.node.events.field_event_type_ref.yml
+++ b/config/default/field.field.node.events.field_event_type_ref.yml
@@ -1,26 +1,26 @@
-uuid: cee82173-c565-455b-a073-3994825ff505
+uuid: c25ded6e-3940-41af-b642-6f272e2cf4e2
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_issue_ref
-    - node.type.products
-    - taxonomy.vocabulary.issue
-id: node.products.field_issue_ref
-field_name: field_issue_ref
+    - field.storage.node.field_event_type_ref
+    - node.type.events
+    - taxonomy.vocabulary.event_type
+id: node.events.field_event_type_ref
+field_name: field_event_type_ref
 entity_type: node
-bundle: products
-label: Issue
+bundle: events
+label: 'Event Type'
 description: ''
-required: true
-translatable: true
+required: false
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      issue: issue
+      event_type: event_type
     sort:
       field: _none
     auto_create: false
